# FileTools

./: .gitignore  English_README.md  LICENSE  README.md  file_tools.py  main.py  pyproject.toml  requirements.txt  style.qss
.cursor/rules/: python.mdc
.github/workflows/: ci.yml
config/: __init__.py  constants.py
docs/: CHANGELOG.md  English_README.md  contributing.md  development.md  faq.md  installation.md  logging.md  testing.md  usage.md
models/: __init__.py  disk_monitor.py  file_generator.py
src/filetools/: __init__.py
src/filetools/config/: __init__.py  constants.py  logger.py
src/filetools/models/: __init__.py  disk_monitor.py  disk_usage.py  file_generator.py
src/filetools/ui/: __init__.py  interface.py
tests/: __init__.py  test_constants.py  test_disk_monitor.py  test_file_generator.py  test_file_generator_core.py  test_ui_functions.py  test_ui_validation.py
ui/: interface.py
utils/: __init__.py  disk.py
